AArch64: mauve System.arraycopy test failure

XMLWordPrintable

    • b23
    • aarch64

        https://ci.adoptopenjdk.net/view/Test_grinder/job/Grinder/1633/tapResults/

        """
        LT FAIL: gnu.testlet.java.lang.System.arraycopy: Object casting (number 0)
        LT got caught IndexOutOfBoundsException but expected caught ArrayStoreException
        """

        This only happens after Mauve has been running for some time, and appears to be a C1-AArch64 bug only.

              Assignee:
              Andrew Haley
              Reporter:
              Andrew Haley
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: