8224671: AArch64: mauve System.arraycopy test failure

Reviewed-by: adinn